Fix mobile nav z-index

--- a/style/main.css
+++ b/style/main.css
@@ -790,6 +790,7 @@ input::-webkit-inner-spin-button {
     padding: 20px;
     overflow: hidden;
     transition: 0.2s;
+    z-index: 9999999;
   }
 
   footer {
